---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 884
expression: "zizmor().input(input_under_test(\"undocumented-permissions.yml\")).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
No findings to report. Good job! (5 suppressed)
